--- a/cars website neww/payal.html
+++ b/cars website neww/payal.html
@@ -6,7 +6,7 @@
     <title>Profile Page</title>
 
     <!-- Custom Css -->
-    <link rel="stylesheet" href="neha.css">
+    <link rel="stylesheet" href="Payal.html">
 
     <!-- FontAwesome 5 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
@@ -45,7 +45,7 @@
     <!-- Sidenav -->
     <div class="sidenav">
         <div class="profile">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSS8-nD2lVRa78MfkMegyCXUwABoI9sCB1JjA&usqp=CAU" alt="" width="100" height="100">
+            <img src="file:///C:/Users/RAHUL/Downloads/cars%20website%20neww/cars%20website%20neww/payal.jpeg" alt="" width="200" height="300">
 
         </div>
 
@@ -73,32 +73,32 @@
                         <tr>
                             <td>Name</td>
                             <td>:</td>
-                            <td>Neha Kamble</td>
+                            <td>Payal Palshetkar</td>
                         </tr>
                         <tr>
                             <td>Email</td>
                             <td>:</td>
-                            <td>neha@gmail.com</td>
+                            <td>it.b.18.payal.palshetkar@gmail.com</td>
                         </tr>
                         <tr>
                             <td>Address</td>
                             <td>:</td>
-                            <td> Pune, india</td>
+                            <td> Thane, india</td>
                         </tr>
                         <tr>
                             <td>Hobbies</td>
                             <td>:</td>
-                            <td>Coding</td>
+                            <td>Calligraphy, Interior Design</td>
                         </tr>
                         <tr>
                             <td>Job</td>
                             <td>:</td>
-                            <td>Engineer</td>
+                            <td>Designer</td>
                         </tr>
                         <tr>
                             <td>Destination</td>
                             <td>:</td>
-                            <td>Satara</td>
+                            <td>Mumbai</td>
                         </tr>
                     </tbody>
                 </table>
