--- a/cars website neww/Sakshi.html
+++ b/cars website neww/Sakshi.html
@@ -6,7 +6,7 @@
     <title>Profile Page</title>
 
     <!-- Custom Css -->
-    <link rel="stylesheet" href="dilip.css">
+    <link rel="stylesheet" href="Sakshi.css">
 
     <!-- FontAwesome 5 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
@@ -45,7 +45,8 @@
     <!-- Sidenav -->
     <div class="sidenav">
         <div class="profile">
-            <img src="https://i.zoomtventertainment.com/story/dilip_joshi_movies.jpg" alt="" width="100" height="100">
+            <img src="file:///C:/Users/RAHUL/Downloads/sakshi.png" alt="" width="200" height="200">
+
 
         </div>
 
@@ -73,32 +74,32 @@
                         <tr>
                             <td>Name</td>
                             <td>:</td>
-                            <td>Dilip Joshi</td>
+                            <td>Sakshi Padwal</td>
                         </tr>
                         <tr>
                             <td>Email</td>
                             <td>:</td>
-                            <td>Jethalal@gmail.com</td>
+                            <td>sakshipadwal2001@gmail.com</td>
                         </tr>
                         <tr>
                             <td>Address</td>
                             <td>:</td>
-                            <td> Indore, india</td>
+                            <td> Thane, india</td>
                         </tr>
                         <tr>
                             <td>Hobbies</td>
                             <td>:</td>
-                            <td>driving</td>
+                            <td>Coding</td>
                         </tr>
                         <tr>
                             <td>Job</td>
                             <td>:</td>
-                            <td>Actor</td>
+                            <td>Engineer</td>
                         </tr>
                         <tr>
                             <td>Destination</td>
                             <td>:</td>
-                            <td>Mumbai</td>
+                            <td>Thane</td>
                         </tr>
                     </tbody>
                 </table>
